# django_tweets_project

./: db.sqlite3  manage.py  pyproject.toml
django_tweets_project/: asgi.py  settings.py  urls.py  wsgi.py
tailwind_theme/static_src/: package-lock.json  package.json  tailwind.config.js
templates/: layout.html
tweet/: forms.py  models.py  views.py
tweet/migrations/: 0001_initial.py
tweet/templates/: index.html
