[tool.poetry]
name = "django-tweets-microblogging-app"
version = "0.1.0"
description = ""
authors = ["ahmedcurious <ahmed_naseem1@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.7"
django-tailwind = {extras = ["reload"], version = "^3.8.0"}
django-browser-reload = "^1.13.0"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
